<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="main_screen_title">My Nanodegree Apps!</string>
    <string name="app_popular_movies">Popular Movies</string>
    <string name="app_stock_hawk">Stock Hawk</string>
    <string name="app_build_it_bigger">Build it bigger</string>
    <string name="app_make_your_app_material">Make your app material</string>
    <string name="app_go_ubiquitous">Go Ubiquitous</string>
    <string name="app_capstone">Capstone</string>
    <string name="msg_show_app">This button will launch my %s app!</string>
</resources>
