<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nanodegree.mauricio.myappportfolio.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/AppTitleStyle"
            android:text="@string/main_screen_title" />

        <Button
            style="@style/AppButtonStyle"
            android:text="@string/app_popular_movies" />

        <Button
            style="@style/AppButtonStyle"
            android:text="@string/app_stock_hawk" />

        <Button
            style="@style/AppButtonStyle"
            android:text="@string/app_build_it_bigger" />

        <Button
            style="@style/AppButtonStyle"
            android:text="@string/app_make_your_app_material" />

        <Button
            style="@style/AppButtonStyle"
            android:text="@string/app_go_ubiquitous" />

        <Button
            style="@style/AppButtonStyle"
            android:text="@string/app_capstone" />

    </LinearLayout>

</ScrollView>